# cyberpunk-ai-tarot

./: .env.example  .gitignore  README.md  add_bleed.py  add_card_back_border.py  add_card_borders.py  command.txt  generate_captions.py  generate_cards.py  generate_cards_comfyui.py  pyproject.toml  setup_training.py  to_a6.py  train.py
config/: train_full.yaml  train_test.yaml
data/missing/: _hyper_meta.jsonl  meta.jsonl  meta_v1.jsonl  meta_v2.jsonl  meta_v3.jsonl  meta_v4.jsonl  meta_v5.jsonl  meta_v6.jsonl  meta_v7.jsonl
data/originals/: .aitk_size.json  TarotCard_01_TheFool.txt  TarotCard_02_TheMagician.txt  TarotCard_03_TheHighPriestess.txt  TarotCard_04_TheEmpress.txt  TarotCard_05_TheEmperor.txt  TarotCard_06_TheHierophant.txt  TarotCard_07_TheLovers.txt  TarotCard_08_TheChariot.txt  TarotCard_09_Strength.txt  TarotCard_10_TheHermit.txt  TarotCard_11_WheelOfFortune.txt  TarotCard_12_Justice.txt  TarotCard_13_TheHangedMan.txt  TarotCard_14_Death.txt  TarotCard_15_Temperance.txt  TarotCard_16_TheDevil.txt  TarotCard_17_TheTower.txt  TarotCard_18_TheStar.txt  TarotCard_19_TheMoon.txt  TarotCard_20_TheSun.txt  TarotCard_21_Judgement.txt  TarotCard_22_TheWorld.txt  Tarot_23_KingOfCups_CP2077PL.txt  Tarot_24_KingOfPentacles_CP2077PL.txt  Tarot_25_KingOfSwords_CP2077PL.txt  Tarot_26_KingOfWands_CP2077PL.txt  meta.jsonl
data/style_bible/: style_bible.json
workflows/: generate_workflow.json
